--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,5 +1,4 @@
 @{
-    ViewData["Title"] = "Login";
     ViewData["SubTitle"] = "Iniciar Sesión";
 }
 
@@ -21,7 +20,7 @@
 <body class="hold-transition login-page">
     <div class="login-box">
         <div class="login-logo">
-            <a href="https://prolgp.cl/"><b>PRO </b>LDA</a>
+            <a href="@Url.Action("Index", "Home")"><b>WebApp </b>CS</a>
         </div>
         <div class="card">
             <div class="card-body login-card-body">
