--- a/Views/Shared/_MainSidebar.cshtml
+++ b/Views/Shared/_MainSidebar.cshtml
@@ -1,30 +1,20 @@
 <!-- Main Sidebar Container -->
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="index3.html" class="brand-link">
-        <img src="dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
-            style="opacity: .8">
-        <span class="brand-text font-weight-light">AdminLTE 3</span>
+    <a href="#" class="brand-link">
+        @* <img src="/images/LOGO.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-1"> *@
+        <img src="/images/LOGO.png" alt="AdminLTE Logo" class="brand-image elevation-1">
+        <span class="brand-text font-weight-light">@ViewData["Title"]</span>
     </a>
 
     <!-- Sidebar -->
     <div class="sidebar">
-        <!-- Sidebar user panel (optional) -->
-        <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-            <div class="image">
-                <img src="dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
-            </div>
-            <div class="info">
-                <a href="#" class="d-block">Cristian Portilla</a>
-            </div>
-        </div>
-
         <!-- Sidebar Menu -->
         <nav class="mt-2">
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-                <!-- Add icons to the links using the .nav-icon class
-                with font-awesome or any other icon font library -->
-                <li class="nav-item has-treeview menu-open">
+                
+                @* Menú desplegable *@
+                @* <li class="nav-item has-treeview menu-open">
                     <a href="#" class="nav-link active">
                         <i class="nav-icon fas fa-tachometer-alt"></i>
                         <p>
@@ -46,12 +36,22 @@
                             </a>
                         </li>
                     </ul>
+                </li> *@
+
+                <li class="nav-item">
+                    <a href="@Url.Action("Index", "Dashboard")" class="nav-link">
+                        <i class="nav-icon fas fa-tachometer-alt"></i>
+                        <p>
+                            Dashboard
+                            <span class="right badge badge-danger">New</span>
+                        </p>
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
-                        <i class="nav-icon fas fa-th"></i>
+                    <a href="@Url.Action("Index", "Users")" class="nav-link">
+                        <i class="nav-icon fa fa-user"></i>
                         <p>
-                            Simple Link
+                            Usuarios
                             <span class="right badge badge-danger">New</span>
                         </p>
                     </a>
