--- a/Views/Users/Edit.cshtml
+++ b/Views/Users/Edit.cshtml
@@ -14,12 +14,12 @@
                     <div class="col-sm-6">
                         <h1 class="m-0 text-dark">Usuarios <a href="@Url.Action("Index","Users")" class="btn btn-secondary"><i class="fa fa-chevron-circle-left" aria-hidden="true"></i></a></h1>
                     </div>
-                    <div class="col-sm-6">
+                    @* <div class="col-sm-6">
                         <ol class="breadcrumb float-sm-right">
                             <li class="breadcrumb-item"><a href="#">Home</a></li>
                             <li class="breadcrumb-item active">Starter Page</li>
                         </ol>
-                    </div>
+                    </div> *@
                 </div>
             </div>
         </div>
