--- a/Views/Users/Index.cshtml
+++ b/Views/Users/Index.cshtml
@@ -2,6 +2,7 @@
     ViewData["SubTitle"] = "Usuarios";
     Layout = "_Layout";
 }
+@model System.Data.DataTable
 
 <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
@@ -44,7 +45,8 @@
                     class="table table-striped table-bordered table-condensed table-hover table-small-font">
                     <thead>
                         <tr>
-                            <th>USUARIO</th>
+                            <th>ID</th>
+                            <th>RUT</th>
                             <th>NOMBRE APELLIDO</th>
                             <th>EMAIL</th>
                             <th>TELÉFONO</th>
@@ -54,13 +56,16 @@
                         </tr>
                     </thead>
                     <tbody>
+                        @foreach (System.Data.DataRow row in Model.Rows)
+                        {
                         <tr>
-                            <td>admin</td>
-                            <td>Administrador</td>
-                            <td>administrador@webappcs.cl</td>
-                            <td>+56999999999</td>
-                            <td>Administrador</td>
-                            <td>Activo</td>
+                            <td>@row["id"]</td>
+                            <td>@row["rut"]</td>
+                            <td>@row["nombre"] @row["apellidos"]</td>
+                            <td>@row["email"]</td>
+                            <td>@row["telefono"]</td>
+                            <td>@row["id_rol"]</td>
+                            <td>@row["id_estado"]</td>
                             <td>
                                 <div class="btn-group btn-group-sm">
                                     <a href="@Url.Action("Edit", "Users")" class="btn btn-info"><i
@@ -71,27 +76,12 @@
                                 </div>
                             </td>
                         </tr>
-                        <tr>
-                            <td>cportilla</td>
-                            <td>Cristian Portilla</td>
-                            <td>cristian.portilla@webappcs.cl</td>
-                            <td>+56999999999</td>
-                            <td>Administrador</td>
-                            <td>Activo</td>
-                            <td>
-                                <div class="btn-group btn-group-sm">
-                                    <a href="@Url.Action("Edit", "Users")" class="btn btn-info"><i
-                                            class="fas fa-pen"></i></a>
-                                    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger">
-                                        <i class="fas fa-trash"></i>
-                                    </button>
-                                </div>
-                            </td>
-                        </tr>
+                        }
                     </tbody>
                     <tfoot>
                         <tr>
-                            <th>USUARIO</th>
+                            <th>ID</th>
+                            <th>RUT</th>
                             <th>NOMBRE APELLIDO</th>
                             <th>EMAIL</th>
                             <th>TELÉFONO</th>
