--- a/Views/Users/Edit.cshtml
+++ b/Views/Users/Edit.cshtml
@@ -47,6 +47,8 @@
                                     <input type="text" class="form-control" placeholder="Apellidos" value="@Model.Apellidos" name="Apellidos" asp-for="Apellidos" required>
                                     <div class="input-group"> 
                                         <span asp-validation-for="Nombre" class="text-danger"></span>
+                                    </div>
+                                    <div class="input-group"> 
                                         <span asp-validation-for="Apellidos" class="text-danger"></span>
                                     </div>
                                 </div>
