Avances en permisos usuarios

--- a/Views/Users/Create.cshtml
+++ b/Views/Users/Create.cshtml
@@ -13,6 +13,12 @@
                     <div class="col-sm-6">
                         <h1 class="m-0 text-dark">Usuarios <a href="@Url.Action("Index","Users")" class="btn btn-secondary"><i class="fa fa-chevron-circle-left" aria-hidden="true"></i></a></h1>
                     </div>
+                    <div class="col-sm-6">
+                        <ol class="breadcrumb float-sm-right">
+                            <li class="breadcrumb-item"><a href="@Url.Action("Index", "Permissions")">Aquí</a></li>
+                            <li class="breadcrumb-item active">Gestionar roles y permisos</li>
+                        </ol>
+                    </div>
                 </div>
             </div>
         </div>
