--- a/Views/Permissions/Index.cshtml
+++ b/Views/Permissions/Index.cshtml
@@ -1,6 +1,6 @@
 @model System.Data.DataTable
 @{
-    ViewData["SubTitle"] = "Usuarios";
+    ViewData["SubTitle"] = "Roles";
     Layout = "_Layout";
 }
 
@@ -13,14 +13,16 @@
                 <div class="row mb-2">
                     <div class="col-sm-6">
                         <h1 class="m-0 text-dark">
-                            Usuarios 
-                            <a href="@Url.Action("Create", "Users")" class="btn btn-success"><i class="fas fa-plus"></i></a>
+                            Roles 
+                            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#modal-success" >
+                                <i class="fas fa-plus"></i>
+                            </button>
                         </h1>
                     </div>
                     <div class="col-sm-6">
                         <ol class="breadcrumb float-sm-right">
-                            <li class="breadcrumb-item"><a href="@Url.Action("Index", "Permissions")">Aquí</a></li>
-                            <li class="breadcrumb-item active">Gestionar roles y permisos</li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("Index", "Users")">Aquí</a></li>
+                            <li class="breadcrumb-item active">Gestionar usuarios</li>
                         </ol>
                     </div>
                 </div>
@@ -42,36 +44,32 @@
                         font-size: 12px;
                     }
                 </style>
-                <table id="UsersTable"
+                <table id="RoleTable"
                     class="table table-striped table-bordered table-condensed table-hover table-small-font">
                     <thead>
                         <tr>
                             <th>ID</th>
-                            <th>RUT</th>
-                            <th>NOMBRE APELLIDO</th>
-                            <th>EMAIL</th>
-                            <th>TELÉFONO</th>
-                            <th>ROL</th>
-                            <th>ESTADO</th>
+                            <th>NOMBRE</th>
                             <th>ACCIONES</th>
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach (System.Data.DataRow row in Model.Rows)
+                        @foreach (System.Data.DataRow row in ViewBag.Roles.Rows)
                         {
                         <tr>
                             <td>@row["id"]</td>
-                            <td>@row["rut"]</td>
-                            <td>@row["nombre"] @row["apellidos"]</td>
-                            <td>@row["email"]</td>
-                            <td>@row["telefono"]</td>
-                            <td>@row["rol"]</td>
-                            <td>@row["estado"]</td>
+                            <td>@row["nombre"]</td>
                             <td>
                                 <div class="btn-group btn-group-sm">
-                                    <a href="@Url.Action("Edit", "Users", new { id = row["Id"] })" class="btn btn-info"><i class="fas fa-pen"></i></a>
+                                    <a href="@Url.Action("PermissionsRole", "Permissions", new { id = row["Id"] })" class="btn btn-info"><i class="fa fa-list-alt"></i></a>
+
+                                    <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#modal-warning" 
+                                        onclick="document.getElementById('roleId').value = '@row["id"]'">
+                                        <i class="fas fa-pen"></i>
+                                    </button>
+                                    
                                     <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger" 
-                                        onclick="document.getElementById('userId').value = '@row["id"]'">
+                                        onclick="document.getElementById('roleId').value = '@row["id"]'">
                                         <i class="fas fa-trash"></i>
                                     </button>
                                 </div>
@@ -82,12 +80,7 @@
                     <tfoot>
                         <tr>
                             <th>ID</th>
-                            <th>RUT</th>
-                            <th>NOMBRE APELLIDO</th>
-                            <th>EMAIL</th>
-                            <th>TELÉFONO</th>
-                            <th>ROL</th>
-                            <th>ESTADO</th>
+                            <th>NOMBRE</th>
                             <th>ACCIONES</th>
                         </tr>
                     </tfoot>
@@ -98,7 +91,9 @@
     </div>
 </div>
 
-<partial name="Partials/Modal-DeleteUser" model="Model"  />
+<partial name="Partials/Modal-CreateRole" model="Model"  />
+<partial name="Partials/Modal-EditRole" model="Model"  />
+<partial name="Partials/Modal-DeleteRole" model="Model"  />
 
 <!-- DataTables -->
 <link rel="stylesheet" href="~/public/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
@@ -119,4 +114,4 @@
 <script src="~/public/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
 
 <!-- Personalize DataTables -->
-<script src="~/js/Tables/UsersTable.js"></script>
+<script src="~/js/Tables/RoleTable.js"></script>
