--- a/Views/Permissions/Partials/Modal-DeleteRole.cshtml
+++ b/Views/Permissions/Partials/Modal-DeleteRole.cshtml
@@ -14,7 +14,7 @@
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
 
                 <form id="deleteForm" method="post" action="@Url.Action("Delete", "Permissions")">
-                    <input type="hidden" name="id" id="roleId">
+                    <input type="hidden" name="id" id="roleDelete">
                     <button type="submit" class="btn btn-danger">Eliminar</button>
                 </form>
 
