Revert "Crud Roles"
This reverts commit bda5c8205a491fe11451053ec438bd972f303930.

--- a/Views/Permissions/Partials/Modal-EditRole.cshtml
+++ b/Views/Permissions/Partials/Modal-EditRole.cshtml
@@ -1,4 +1,3 @@
-@model WebAppCS.Models.Roles
 <div class="modal fade" id="modal-warning">
     <div class="modal-dialog">
         <div class="modal-content ">
@@ -8,26 +7,18 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <form id="editForm" method="post" action="@Url.Action("Update", "Permissions")">
-                <div class="modal-body">
-                    <label for="rol">Nombre del Rol</label>
-                    <input type="text" id="rol" asp-for="Nombre" class="form-control" placeholder="Rol">
-                    <span asp-validation-for="Nombre" class="text-danger"></span>
-                </div>
-                
-                <div class="modal-footer justify-content-between">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                    <input type="hidden" name="Id" id="roleEdit" value="@Model?.Id">
-                    <button type="submit" class="btn btn-warning">Guardar</button>
-                </div>
-            </form>
+            <div class="modal-body">
+                <p>Editar rol</p>
+            </div>
+            <div class="modal-footer justify-content-between">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+
+                <form id="deleteForm" method="post" action="@Url.Action("Update", "Permissions")">
+                    <input type="hidden" name="id" id="roleId">
+                    <button type="submit" class="btn btn-warning">Salvar</button>
+                </form>
+
+            </div>
         </div>
     </div>
 </div>
-<script>
-    $(document).ready(function () {
-        $("#modal-warning").on("shown.bs.modal", function () {
-            $.validator.unobtrusive.parse("#editForm");
-        });
-    });
-</script>
