--- a/Views/Permissions/Index.cshtml
+++ b/Views/Permissions/Index.cshtml
@@ -48,7 +48,7 @@
                     class="table table-striped table-bordered table-condensed table-hover table-small-font">
                     <thead>
                         <tr>
-                            <th>ID</th>
+                            @* <th>ID</th> *@
                             <th>NOMBRE</th>
                             <th>ACCIONES</th>
                         </tr>
@@ -57,7 +57,7 @@
                         @foreach (System.Data.DataRow row in ViewBag.Roles.Rows)
                         {
                         <tr>
-                            <td>@row["id"]</td>
+                            @* <td>@row["id"]</td> *@
                             <td>@row["nombre"]</td>
                             <td>
                                 <div class="btn-group btn-group-sm">
@@ -80,7 +80,7 @@
                     </tbody>
                     <tfoot>
                         <tr>
-                            <th>ID</th>
+                            @* <th>ID</th> *@
                             <th>NOMBRE</th>
                             <th>ACCIONES</th>
                         </tr>
