--- a/Views/Permissions/Index.cshtml
+++ b/Views/Permissions/Index.cshtml
@@ -44,7 +44,7 @@
                         font-size: 12px;
                     }
                 </style>
-                <table id="RoleTable"
+                <table id="RolesTable"
                     class="table table-striped table-bordered table-condensed table-hover table-small-font">
                     <thead>
                         <tr>
@@ -122,4 +122,4 @@
 <script src="~/public/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
 
 <!-- Personalize DataTables -->
-<script src="~/js/Tables/RoleTable.js"></script>
+<script src="~/js/Permissions/RolesTable.js"></script>
