--- a/Views/Users/Index.cshtml
+++ b/Views/Users/Index.cshtml
@@ -125,4 +125,4 @@
 <script src="~/public/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
 
 <!-- Personalize DataTables -->
-<script src="~/js/Tables/UsersTable.js"></script>
+<script src="~/js/Users/UsersTable.js"></script>
