Modulo de Usuarios V1

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -46,6 +46,8 @@
         <partial name="_ControlSidebar" model="Model" />
         <partial name="_Footer" model="Model" />
 
+        @await Html.PartialAsync("~/Views/Common/Toast.cshtml")
+
     </div>
     <!-- ./wrapper -->
 
